[gd_scene load_steps=12 format=2]

[ext_resource path="res://core/fruits/corn/corn_icon.png" type="Texture" id=1]
[ext_resource path="res://ui/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://fonts/pixel12/pixel12_default.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/plant dialog/PlantDialog.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.62
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("ViewHolder/PanelContainer/ChoicePanel/ButtonContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.26, 0.61 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ViewHolder/CancelButton:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.26, 0.61 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ViewHolder/PanelContainer:rect_size")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.02, 0.36 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 206, 13 ), Vector2( 206, 366 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ViewHolder/PanelContainer:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.02, 0.36 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 179 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ViewHolder/ColorRect:color")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.02, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.392157 ) ]
}

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 0, 0, 0, 0.364706 )
shadow_size = 2
shadow_offset = Vector2( 0, 2 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.196078 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 1
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 1
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 4
shadow_color = Color( 0, 0, 0, 0 )
shadow_size = 1
shadow_offset = Vector2( 0, 1.5 )
anti_aliasing = false

[node name="PlantDialog" type="CanvasLayer"]
layer = 110
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/open = SubResource( 1 )

[node name="ViewHolder" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ViewHolder"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.0450238 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Control" parent="ViewHolder"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 170.513
margin_bottom = -165.75
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoicePanel" type="Panel" parent="ViewHolder/PanelContainer"]
anchor_left = 0.039
anchor_top = 0.415
anchor_right = 0.971
anchor_bottom = 0.568
margin_left = -0.0340004
margin_top = 0.109985
margin_right = -0.0260162
margin_bottom = 0.112
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="HBoxContainer" parent="ViewHolder/PanelContainer/ChoicePanel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.019
anchor_top = 0.1
anchor_right = 0.981
anchor_bottom = 0.9
margin_left = 0.0859997
margin_right = -0.0860138
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconButton" type="Button" parent="ViewHolder/PanelContainer/ChoicePanel/ButtonContainer"]
margin_right = 44.0
margin_bottom = 14.0
rect_min_size = Vector2( 44, 0 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
text = "corn"

[node name="Container" type="VBoxContainer" parent="ViewHolder/PanelContainer/ChoicePanel/ButtonContainer/IconButton"]
anchor_left = 0.125
anchor_top = 0.091
anchor_right = 0.875
anchor_bottom = 0.906
margin_top = -0.00400019
margin_right = -1.90735e-06
margin_bottom = 0.135998
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="ViewHolder/PanelContainer/ChoicePanel/ButtonContainer/IconButton/Container"]
margin_right = 32.0
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Text" type="Label" parent="ViewHolder/PanelContainer/ChoicePanel/ButtonContainer/IconButton/Container"]
margin_top = 2.0
margin_right = 32.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Corn"
align = 1

[node name="CancelButton" type="Button" parent="ViewHolder"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.699
anchor_top = 0.555
anchor_right = 0.981
anchor_bottom = 0.601
margin_left = 0.0059967
margin_top = -0.130005
margin_right = -0.0859985
margin_bottom = 0.0339966
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Cancel"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ViewHolder/CancelButton" to="." method="_on_CancelButton_pressed"]
